fixed headers small offset issues (overflow-x) + fixed tweet button alignment + textarea alignment

--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -132,6 +132,7 @@ li {
 		flex-direction: column;
 		flex: 1 0 auto;
 		height: 100vh;
+		min-height: 100vh;
 		width: 68px;
 		border-top: 0;
 		margin: 0;
@@ -464,6 +465,7 @@ button:hover {
 		width: 100%;
 		height: 100vh;
 		position: relative;
+		top:unset;
 		box-sizing: border-box;
 		border-left: var(--main-border-style);
 		border-right: var(--main-border-style);
@@ -625,17 +627,21 @@ button:hover {
 		margin: 0;
 		padding: 0 0 0 0;
 		box-sizing: border-box;
+		overflow-x: auto;//this allows for perfect alignment of the texts in this case
 	}
 	&_li {
 		display: flex;
-		align-items: center;
+		flex-direction: column;
+		align-items: stretch;
 		justify-content: center;
 		height: 100%;
 		flex: 1 0 auto;
 		font-size: 15px;
-		font-weight: 500;
-		line-height: 20px;
-		padding: 0 0;
+		//font-weight: 500;
+		//line-height: 20px;
+		letter-spacing: normal;
+		padding: 0 ;
+		margin: 0;
 		box-sizing: border-box;
 		text-size-adjust: 100%;
 	}
@@ -646,7 +652,6 @@ button:hover {
 		width: 100%;
 		margin: 0;
 		padding: 0 16px;
-		display: flex;
 		justify-content: center;
 		outline-style: none;
 		text-decoration: none;
@@ -663,7 +668,8 @@ button:hover {
 		@extend .header_anchor;
 		flex-direction: column;
 		padding: 16px 16px 0 16px;
-		overflow-x: visible;
+		box-sizing: border-box;
+		//overflow-x: auto;
 		div {
 			font-family: chirpBold;
 			color: black;
@@ -712,7 +718,7 @@ button:hover {
 	flex-direction: column;
 	width: calc(100% - 1px);
 	margin: 0;
-	padding: 4px 0 7.5px 0;
+	padding: 4px 16px 7.5px 0;
 	box-sizing: border-box;
 	border-bottom: var(--main-border-style);
 
@@ -748,6 +754,7 @@ button:hover {
 		border: none;
 		font-size: 20px;
 		font-family: chirp;
+		resize: none;
 	}
 
 	&_icons-row {
@@ -808,9 +815,10 @@ button:hover {
 	&_wrapper--btn {
 		@extend .wrappers--flex;
 		flex: 0 1 33%;
-		width: 89.83px;
+		max-width: 89.83px;
 		justify-content: end;
 		align-items: end;
+		margin-right: 1px;
 		//border: 2px solid green;
 	}
 	&_btn {
@@ -825,7 +833,7 @@ button:hover {
 		height: 36px;
 		color: rgb(255, 255, 255);
 		background-color: rgba(29, 155, 240, 0.5);
-		margin: 0 18px 0 0;
+		margin: 0 0 0 0;
 		padding: 0;
 		border: none;
 		//margin-top: 1.5rem;
